As a consequence, old queue files being read by this version may have
an invalid output timestamp, which could result to some malfunction inside
the output driver. It is recommended to drain queues with the previous
version before switching to this one.
********************************* WARNING *********************************

- reordered imudp processing. Message parsing is now done as part of main
  message queue worker processing (was part of the input thread)
  This should also improve performance, as potentially more work is
  done in parallel.
- bugfix: compressed syslog messages could be slightly mis-uncompressed
  if the last byte of the compressed record was a NUL
- added $UDPServerTimeRequery option which enables to work with
  less acurate timestamps in favor of performance. This enables querying
  of the time only every n-th time if imudp is running in the tight
  receive loop (aka receiving messsages at a high rate)
- doc bugfix: queue doc had wrong parameter name for setting controlling
  worker thread shutdown period
- consolidated time calls during msg object creation, improves performance
  and consistency
- bugfix: subsecond time properties generated by imfile, imklog and
  internal messages could be slightly inconsistent
---------------------------------------------------------------------------
Version 3.21.5  [DEVEL] (rgerhards), 2008-09-30
- performance optimization: unnecessary time() calls during message
  parsing removed - thanks to David Lang for his excellent performance
  analysis
- added new capability to property replacer: multiple immediately
  successive field delimiters are treated as a single one.
  Thanks to Zhuang Yuyao for the patch.
- added message property "inputname", which contains the name of the
  input (module) that generated it. Presence is depending on suport in
  each input module (else it is blank).
- added system property "$myhostname", which contains the name of the
  local host as it knows itself.